--- a/views/restaurants/show.ejs
+++ b/views/restaurants/show.ejs
@@ -48,11 +48,15 @@
                 <div class="card-body">
                     <h5 class="card-title">Rating: <%= review.rating %></h5>
                     <p class="card-text">Review: <%= review.body %> </p>
+                    <form action="/restaurants/<%= restaurant._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
+                        <button class="btn btn-sm btn-danger">Delete</button>
+                    </form>
                 </div>
            </div>
         <% } %> 
     </div>
 </div>
+<!-- TODO: posts >= 3 pagination -->
 
 
   
