home + refactoring some routes

--- a/views/restaurants/show.ejs
+++ b/views/restaurants/show.ejs
@@ -6,19 +6,27 @@
         <div class="card mb-5">
             <img src="<%= restaurant.image %>" class="card-img-top" alt="Image not working:(">
             <div class="card-body">
-            <h5 class="card-title"><%= restaurant.title %></h5>
-            <p class="card-text"><%= restaurant.description %></p>
+                <h5 class="card-title">
+                    <%= restaurant.title %>
+                </h5>
+                <p class="card-text">
+                    <%= restaurant.description %>
+                </p>
             </div>
             <ul class="list-group list-group-flush">
-            <li class="list-group-item"><%= restaurant.location %></li>
-            <li class="list-group-item"><%= restaurant.price %></li>
+                <li class="list-group-item">
+                    <%= restaurant.location %>
+                </li>
+                <li class="list-group-item">
+                    <%= restaurant.price %>
+                </li>
             </ul>
             <div class="card-body">
                 <a href="/restaurants/<%=restaurant.id%>/edit" class="card-link btn btn-warning">Edit Restaurant</a>
                 <form class="d-inline" action="/restaurants/<%=restaurant._id%>?_method=DELETE" method="POST">
                     <button class=" btn btn-danger">Delete Restaurant</button>
                 </form>
-                
+
             </div>
             <!-- TO UPDATE! -->
             <div class="card-footer">
@@ -29,37 +37,44 @@
     <!-- REVIEW SIDE TODO: transofrm rating bar => rating stars-->
     <div class="col-6">
         <h2>Leave a Review!</h2>
-        <form action="/restaurants/<%= restaurant.id %>/reviews" class="mb-5 validated-form" method="POST" novalidate> 
+        <form action="/restaurants/<%= restaurant.id %>/reviews" class="mb-5 validated-form" method="POST"
+            novalidate>
             <div class="mb-3">
                 <label for="rating">Rating</label>
                 <input type="range" name="review[rating]" id="rating" class="form-range" min="1" max="5">
             </div>
             <div class="mb-3">
                 <label class="form-label" for="body">Review</label>
-                <textarea class="form-control" name="review[body]" id="" cols="30" rows="2" id="body" required></textarea>
+                <textarea class="form-control" name="review[body]" id="" cols="30" rows="2" id="body"
+                    required></textarea>
                 <div class="valid-feedback">
                     Looks Good!
                 </div>
             </div>
             <button class="btn btn-success">Submit</button>
         </form>
-        <% for(let review of restaurant.reviews) { %> 
+        <% for(let review of restaurant.reviews) { %>
             <div class="card mb-2">
                 <div class="card-body">
-                    <h5 class="card-title">Rating: <%= review.rating %></h5>
-                    <p class="card-text">Review: <%= review.body %> </p>
-                    <form action="/restaurants/<%= restaurant._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
+                    <h5 class="card-title">Rating: <%= review.rating %>
+                    </h5>
+                    <p class="card-text">Review: <%= review.body %>
+                    </p>
+                    <form action="/restaurants/<%= restaurant._id %>/reviews/<%= review._id %>?_method=DELETE"
+                        method="POST">
                         <button class="btn btn-sm btn-danger">Delete</button>
                     </form>
                 </div>
-           </div>
-        <% } %> 
+            </div>
+            <% } %>
     </div>
 </div>
 <!-- TODO: posts >= 3 pagination -->
 
 
-  
-<!-- <footer>
+
+
+
+    <!-- <footer>
     <a href="/restaurants">All restaurants</a>
 </footer> -->
