--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,10 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Document</title>
+
+    <link type="text/css" rel="stylesheet" href="/css/rating.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/homePage.css">
+
+
 </head>
 <body>
-    <h1>Home LICENTA!!</h1>
-    
+    <%- include("./partials/navbar") %> 
+
+   <section class="showcase">
+   
+    <video src="media/video/video.mp4" muted loop autoplay></video>
+    <div class="overlay"></div>
+    <div class="text">
+      <h2>Never Stop To </h2> 
+      <h3>Exploring The World</h3>
+      <p>User Reviews and Recommendations of Best Restaurants, Shopping, Nightlife, Food, Entertainment, Things to Do, Services and More </p>
+      <a href="#">Explore</a>
+    </div>
+
+
+  </section>
+  <%- include("./partials/footer") %> 
+
+
+
+ 
+
 </body>
 </html>
