--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -10,14 +10,23 @@
     <link type="text/css" rel="stylesheet" href="/css/error.css" />
     <link type="text/css" rel="stylesheet" href="/css/rating.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    
+    <script src="https://kit.fontawesome.com/fe141b0b3d.js" crossorigin="anonymous"></script>
+
 </head>
 <body class="d-flex flex-column vh-100">
   
+
     <%- include("../partials/navbar") %> 
     
+
+
     <main class="container mt-5 mb-2">
+      
+        <%- include("../partials/flash") %> 
+
+
         <%- body  %> 
+        
     </main>
 
     <%- include("../partials/footer") %> 
