--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,6 +10,13 @@
                 <a class="nav-link" href="/restaurants">Restaurants</a>
                 <a class="nav-link" href="/restaurants/new">New Restaurant</a>
             </div>
+            <div class="navbar-nav ms-auto">
+                <a class="nav-link" href="/login">Login</a>
+                <a class="nav-link" href="/register">Register</a>
+                <a class="nav-link" href="/logout">Logout</a>
+
+
+            </div>
         </div>
     </div>
 </nav>
