--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,7 +23,7 @@
       <h2>Never Stop To </h2> 
       <h3>Exploring The World</h3>
       <p>User Reviews and Recommendations of Best Restaurants, Shopping, Nightlife, Food, Entertainment, Things to Do, Services and More </p>
-      <a href="#">Explore</a>
+      <a href="/restaurants">Explore</a>
     </div>
 
 
