--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -8,12 +8,17 @@
             <div class="navbar-nav">
                 <a class="nav-link" href="/">Home</a>
                 <a class="nav-link" href="/restaurants">Restaurants</a>
+                <% if(currentUser){ %>  
                 <a class="nav-link" href="/restaurants/new">New Restaurant</a>
+                <% } %> 
             </div>
             <div class="navbar-nav ms-auto">
-                <a class="nav-link" href="/login">Login</a>
+                <% if(!currentUser){ %> 
+                <a class="nav-link" href="/login">Log in</a>
                 <a class="nav-link" href="/register">Register</a>
+                <% } else { %> 
                 <a class="nav-link" href="/logout">Logout</a>
+                <% } %> 
 
 
             </div>
