--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -6,7 +6,7 @@
         <div class="col-md-5 pr-lg-5 mb-5 mb-md-0">
             <img src="/media/img/burgerRegister.png" alt="" class="img-fluid mb-3 d-none d-md-block">
             <h1>Create an Account</h1>
-            <p class="font-italic text-muted mb-0">Create a new account and explore reviews and recommandations of the Best Restaurants!</p>
+            <p class="font-italic text-muted mb-0">Create a new account and explore reviews and recommendations of the Best Restaurants!</p>
             
         </div>
 
@@ -100,15 +100,15 @@
                                 &nbsp;<i class="fa fa-lock text-muted"></i>
                             </span>
                         </div>
-                        <input id="passwordConfirmation" type="text" name="passwordConfirmation" placeholder="Confirm Password" class="form-control bg-white border-left-0 border-md" required>
+                        <input id="passwordConfirmation" type="password" name="passwordConfirmation" placeholder="Confirm Password" class="form-control bg-white border-left-0 border-md" required>
                         <div class="valid-feedback">
                             Looks Good!
                         </div>
                     </div>
 
                     <!-- Submit Button -->
-                    <div class="form-group col-lg-12 mx-auto mb-0">
-                            <button class="btn btn-primary font-weight-bold mr-auto">Create your account</button>
+                    <div class="form-group mb-2 d-flex justify-content-center">
+                        <button class="btn btn-primary font-weight-bold mr-auto w-50">Create your account</button>
                         </a>
                     </div>
                 
