--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,8 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark text-white ">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Restaurants</a>
+        <a class="navbar-brand" href="/restaurants">
+            <img src="/media/img/logo3.png"  alt="" width="" height="0px">Smart Choice
+          </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
              <span class="navbar-toggler-icon"></span>
         </button>
