--- a/views/restaurants/new.ejs
+++ b/views/restaurants/new.ejs
@@ -56,7 +56,7 @@
              <!-- IMAGE -->
              <div class="form-file custom-file mb-3">
                 <label for="images" class="form-label">Choose images</label>
-                <input class="form-control custom-file-label" type="file" id="images" name="image" multiple>
+                <input class="form-control custom-file-label" type="file" id="images" name="image" multiple required>
             </div>
 
             <div class="mb-3">
