--- a/public/css/starbility-slot.css
+++ b/public/css/starbility-slot.css
@@ -195,3 +195,10 @@
     -webkit-transition: background-position .7s;
     transition: background-position .7s;
   }
+
+  .customWW {
+    width:100%;
+    height:350px;
+    object-fit:cover;
+    object-position:50% 50%;
+  }
