--- a/views/restaurants/index.ejs
+++ b/views/restaurants/index.ejs
@@ -11,12 +11,21 @@
     <div class="card mb-3 bg-light">
         <div class="row">
             <div class="col-md-4">
-                <img src="<%= (restaurant.images.length > 0 ) ? restaurant.images[0].url : restaurant.defaultImage %>" class="img-fluid zoom" alt="">
+                <div class="inner ">
+                     <img src="<%= (restaurant.images.length > 0 ) ? restaurant.images[0].url : restaurant.defaultImage %>" class="img-fluid zoom index-images" alt="">
+                 </div>
             </div>
             <div class="col-md-8">
                 <div class="card-body">
                     <h5 class="card-title"><%= restaurant.title %></h5>
-                    <p class="card-text"><%= restaurant.description %></p>
+                    <p class="card-text">
+                        <% if ( restaurant.description.length > 400 ) { %> 
+                            <%= restaurant.description.slice(0, 300) %> 
+                            <a href="/restaurants/<%=restaurant._id%> " class="link-info">Read More</a>
+                        <% } else { %>
+                            <%= restaurant.description %> 
+                        <% } %>  
+                    </p>
                     <p class="card-text">
                         <small class="text-muted"><%= restaurant.location %></small>
                     </p>
