webscraping reviews + added maps

--- a/views/restaurants/index.ejs
+++ b/views/restaurants/index.ejs
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="inner ">
-                     <img src="<%= (restaurant.images.length > 0 ) ? restaurant.images[0].url : restaurant.defaultImage %>" class="img-fluid zoom index-images" alt="">
+                     <img src="<%= (restaurant.images.length > 0 ) ? restaurant.images[0].url : restaurant.defaultImage %>" style="max-height: 10%;" class="img-fluid zoom index-images" alt="">
                  </div>
             </div>
             <div class="col-md-8">
