--- a/views/restaurants/index.ejs
+++ b/views/restaurants/index.ejs
@@ -1,5 +1,5 @@
 <% layout("layouts/boilerplate")%> 
-<h1>All Restaurants</h1>
+<h1 class="display-4">List of Restaurants</h1>
 <div>
     <!-- <a href="/restaurants/new">Add Restaurant</a> -->
 </div>
@@ -35,7 +35,7 @@
         </div>
     </div>
 <% } %>
-
+<!-- del aria-label -->
 <!-- Pagination -->
 <nav aria-label="Page navigation example">
     <ul class="pagination justify-content-center">
